; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/src/extr_netconf.c_LwIP_Init.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/src/extr_netconf.c_LwIP_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.ip_addr = type { i64 }

@IP_ADDR0 = common dso_local global i32 0, align 4
@IP_ADDR1 = common dso_local global i32 0, align 4
@IP_ADDR2 = common dso_local global i32 0, align 4
@IP_lastOctet = common dso_local global i32 0, align 4
@NETMASK_ADDR0 = common dso_local global i32 0, align 4
@NETMASK_ADDR1 = common dso_local global i32 0, align 4
@NETMASK_ADDR2 = common dso_local global i32 0, align 4
@NETMASK_ADDR3 = common dso_local global i32 0, align 4
@GW_ADDR0 = common dso_local global i32 0, align 4
@GW_ADDR1 = common dso_local global i32 0, align 4
@GW_ADDR2 = common dso_local global i32 0, align 4
@GW_ADDR3 = common dso_local global i32 0, align 4
@gnetif = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@ethernetif_init = common dso_local global i32 0, align 4
@ethernet_input = common dso_local global i32 0, align 4
@EthStatus = common dso_local global i32 0, align 4
@ETH_INIT_FLAG = common dso_local global i32 0, align 4
@ETH_LINK_FLAG = common dso_local global i32 0, align 4
@NETIF_FLAG_LINK_UP = common dso_local global i32 0, align 4
@ETH_link_callback = common dso_local global i32 0, align 4
@DHCP_LINK_DOWN = common dso_local global i32 0, align 4
@DHCP_START = common dso_local global i32 0, align 4
@DHCP_state = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @LwIP_Init() #0 {
  %1 = alloca %struct.ip_addr, align 8
  %2 = alloca %struct.ip_addr, align 8
  %3 = alloca %struct.ip_addr, align 8
  %4 = call i32 (...) @mem_init()
  %5 = call i32 (...) @memp_init()
  %6 = load i32, i32* @IP_ADDR0, align 4
  %7 = load i32, i32* @IP_ADDR1, align 4
  %8 = load i32, i32* @IP_ADDR2, align 4
  %9 = load i32, i32* @IP_lastOctet, align 4
  %10 = call i32 @IP4_ADDR(%struct.ip_addr* %1, i32 %6, i32 %7, i32 %8, i32 %9)
  %11 = load i32, i32* @NETMASK_ADDR0, align 4
  %12 = load i32, i32* @NETMASK_ADDR1, align 4
  %13 = load i32, i32* @NETMASK_ADDR2, align 4
  %14 = load i32, i32* @NETMASK_ADDR3, align 4
  %15 = call i32 @IP4_ADDR(%struct.ip_addr* %2, i32 %11, i32 %12, i32 %13, i32 %14)
  %16 = load i32, i32* @GW_ADDR0, align 4
  %17 = load i32, i32* @GW_ADDR1, align 4
  %18 = load i32, i32* @GW_ADDR2, align 4
  %19 = load i32, i32* @GW_ADDR3, align 4
  %20 = call i32 @IP4_ADDR(%struct.ip_addr* %3, i32 %16, i32 %17, i32 %18, i32 %19)
  %21 = call i32 @netif_add(%struct.TYPE_7__* @gnetif, %struct.ip_addr* %1, %struct.ip_addr* %2, %struct.ip_addr* %3, i32* null, i32* @ethernetif_init, i32* @ethernet_input)
  %22 = call i32 @netif_set_default(%struct.TYPE_7__* @gnetif)
  %23 = load i32, i32* @EthStatus, align 4
  %24 = load i32, i32* @ETH_INIT_FLAG, align 4
  %25 = load i32, i32* @ETH_LINK_FLAG, align 4
  %26 = or i32 %24, %25
  %27 = icmp eq i32 %23, %26
  br i1 %27, label %28, label %33

28:                                               ; preds = %0
  %29 = load i32, i32* @NETIF_FLAG_LINK_UP, align 4
  %30 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @gnetif, i32 0, i32 0), align 4
  %31 = or i32 %30, %29
  store i32 %31, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @gnetif, i32 0, i32 0), align 4
  %32 = call i32 @netif_set_up(%struct.TYPE_7__* @gnetif)
  br label %35

33:                                               ; preds = %0
  %34 = call i32 @netif_set_down(%struct.TYPE_7__* @gnetif)
  br label %35

35:                                               ; preds = %33, %28
  %36 = load i32, i32* @ETH_link_callback, align 4
  %37 = call i32 @netif_set_link_callback(%struct.TYPE_7__* @gnetif, i32 %36)
  ret void
}

declare dso_local i32 @mem_init(...) #1

declare dso_local i32 @memp_init(...) #1

declare dso_local i32 @IP4_ADDR(%struct.ip_addr*, i32, i32, i32, i32) #1

declare dso_local i32 @netif_add(%struct.TYPE_7__*, %struct.ip_addr*, %struct.ip_addr*, %struct.ip_addr*, i32*, i32*, i32*) #1

declare dso_local i32 @netif_set_default(%struct.TYPE_7__*) #1

declare dso_local i32 @netif_set_up(%struct.TYPE_7__*) #1

declare dso_local i32 @netif_set_down(%struct.TYPE_7__*) #1

declare dso_local i32 @netif_set_link_callback(%struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
